force-app/main/default/objects/Peel_S__c/Peel_S__c.object-meta.xml
<CustomObject>
    <label>Peel(S)</label>
    <nameField>
        <label>Peel(S) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Peel(S)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>