force-app/main/default/objects/Peel_S__c/fields/Peels__c.field-meta.xml
<CustomField>
    <fullName>Peels__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Peel</label>
    <referenceTo>Peel__c</referenceTo>
    <relationshipLabel>Peel(S)</relationshipLabel>
    <relationshipName>Peel_S</relationshipName>
    <type>Lookup</type>
</CustomField>